tests/negative/gold/try_test.gold
tests/negative/try_test.toit:5:5: error: Missing ':' after 'try'
    unresolved
    ^~~~~~~~~~
tests/negative/try_test.toit:8:15: error: Missing 'finally' block
    unresolved
              ^
tests/negative/try_test.toit:13:5: error: Missing ':' after finally
    unresolved
    ^~~~~~~~~~
tests/negative/try_test.toit:23:5: error: Missing ':' after finally
    unresolved
    ^~~~~~~~~~
tests/negative/try_test.toit:5:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/try_test.toit:8:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/try_test.toit:11:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/try_test.toit:13:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/try_test.toit:16:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/try_test.toit:18:7: error: Unresolved identifier: 'unresolved'
      unresolved
      ^~~~~~~~~~
tests/negative/try_test.toit:21:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/try_test.toit:23:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
Compilation failed.
